modules/vpc/main.tf
# modules/vpc/main.tf
resource "aws_vpc" "this" {
  cidr_block           = var.cidr_block
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    Name = "${var.name}-vpc"
  }
}

resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id
  tags = {
    Name = "${var.name}-igw"
  }
}

resource "aws_nat_gateway" "this" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public[0].id
  depends_on    = [aws_internet_gateway.this]
  tags = {
    Name = "${var.name}-nat"
  }
}

resource "aws_eip" "nat" {
  domain = "vpc"
}

resource "aws_subnet" "public" {
  count             = length(var.azs)
  vpc_id            = aws_vpc.this.id
  cidr_block        = cidrsubnet(var.cidr_block, 4, count.index)
  availability_zone = var.azs[count.index]
  map_public_ip_on_launch = true
  tags = {
    Name = "${var.name}-public-${count.index + 1}"
  }
}

#resource "aws_subnet" "private" {
#  count             = length(var.azs)
#  vpc_id            = aws_vpc.this.id
#  cidr_block        = cidrsubnet(var.cidr_block, 4, count.index + 10)
#  availability_zone = var.azs[count.index]
#  tags = {
#    Name = "${var.name}-private-${count.index + 1}"
#  }
#}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.this.id
  tags = {
    Name = "${var.name}-public-rt"
  }
}
#resource "aws_route_table" "private" {
#  vpc_id = aws_vpc.this.id
#  tags = {
#    Name = "${var.name}-private-rt"
#  }
#}
#resource "aws_route" "nat_gateway" {
#  route_table_id         = aws_route_table.private.id
#  destination_cidr_block = "0.0.0.0/0"
#  nat_gateway_id         = aws_nat_gateway.this.id
#}
resource "aws_route" "internet_access" {
  route_table_id         = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.this.id
}

resource "aws_route_table_association" "public" {
  count          = length(var.azs)
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}
#resource "aws_route_table_association" "private" {
#  count          = length(aws_subnet.private)
#  subnet_id      = aws_subnet.private[count.index].id
#  route_table_id = aws_route_table.private.id
#}

# Public/Private 라우트 테이블에 Peering 연결 추가
resource "aws_route" "peering_to_peer" {
  count                     = length(var.route_table_ids)
  route_table_id            = var.route_table_ids[count.index]
  destination_cidr_block    = var.peer_cidr_block
  vpc_peering_connection_id = var.peering_connection_id
}
resource "aws_route" "peering_routes" {
  count                     = var.peering_connection_id != null && var.peer_cidr_block != null ? length(var.route_table_ids_to_update) : 0
  route_table_id            = var.route_table_ids_to_update[count.index]
  destination_cidr_block    = var.peer_cidr_block
  vpc_peering_connection_id = var.peering_connection_id
}

resource "aws_subnet" "ecs_private" {
  count             = length(var.azs)
  vpc_id            = aws_vpc.this.id
  cidr_block        = var.ecs_private_subnet_cidrs[count.index]
  availability_zone = var.azs[count.index]
  tags = {
    Name = "${var.name}-ecs-private-${count.index + 1}"
  }
}

resource "aws_subnet" "db_private" {
  count             = length(var.azs)
  vpc_id            = aws_vpc.this.id
  cidr_block        = var.db_private_subnet_cidrs[count.index]
  availability_zone = var.azs[count.index]
  tags = {
    Name = "${var.name}-db-private-${count.index + 1}"
  }
}
resource "aws_route_table" "ecs_private" {
  vpc_id = aws_vpc.this.id

  tags = {
    Name = "${var.name}-ecs-private-rt"
  }
}

resource "aws_route" "ecs_nat_gateway" {
  route_table_id         = aws_route_table.ecs_private.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.this.id
}

resource "aws_route_table_association" "ecs_private" {
  count          = length(aws_subnet.ecs_private)
  subnet_id      = aws_subnet.ecs_private[count.index].id
  route_table_id = aws_route_table.ecs_private.id
}
resource "aws_route_table" "db_private" {
  vpc_id = aws_vpc.this.id
  tags = {
    Name = "${var.name}-db-private-rt"
  }
}

resource "aws_route" "db_nat_gateway" {
  route_table_id         = aws_route_table.db_private.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.this.id
}

resource "aws_route_table_association" "db_private" {
  count          = length(aws_subnet.db_private)
  subnet_id      = aws_subnet.db_private[count.index].id
  route_table_id = aws_route_table.db_private.id
}
